# jp-zip-lookup

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  sqlx-data.json
.github/workflows/: rust.yml
data/: README.md  download-and-import.sh
docker/: Dockerfile  README.md  compose.yml  postgres-setup.sql  run-postgresql.sh  seed-data.sql
src/: constants.rs  main.rs  responses.rs  state.rs  utils.rs
src/database/: mod.rs
src/routes/: errors.rs  healthcheck.rs  index.rs  mod.rs
src/routes/lookup/: zip.rs
src/routes/postcodes/: mod.rs
src/routes/prefectures/: cities.rs  mod.rs
