[package]
name = "jp-zip-lookup"
description = "A simple REST-based webservice to allow address lookup by ZIP code for Japan"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1"
axum = { version = "0.6", features = ["http2", "multipart", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
